rename index to default and change image format

--- a/default.html
+++ b/default.html
@@ -14,7 +14,7 @@
             Welcome to our team
         </p>    
         <div class="flex-layout">
-            <img src="/images/members.jfif" alt="Group Image" usemap="#group-map" class="team-image">
+            <img src="/images/members.jpg" alt="Group Image" usemap="#group-map" class="team-image">
             <div class="text-content">    
                 <table class="team-table">
                     <tr>
