--- a/members/22120416/22120416.html
+++ b/members/22120416/22120416.html
@@ -42,7 +42,7 @@
             </tr>
         </table>
     </div>
-    <a href="../../default.html">
+    <a href="../../index.html">
         <button class="back-button">Back To Group Page</button>
     </a>
 </body>
