finish the project

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </tr>
                     <tr>
                         <td>Lê Cao Tuấn Vũ</td>
-                        <td>22120abc</td>
+                        <td>22120436</td>
                     </tr>
                     <tr>
                         <td>Vũ Thế Vỹ</td>
-                        <td>22120xyz</td>
+                        <td>22120451</td>
                     </tr>
                 </table>
             </div>
@@ -42,8 +42,8 @@
     </div>
     <map name="group-map">
         <area shape="rect" coords="240,315,332,114" href="./members/22120416/22120416.html" alt="Tuyen's page">
-        <area shape="rect" coords="" href="22120abc.html" alt="Vu's Page">
-        <area shape="rect" coords="0,0,0,0" href="22120xyz.html" alt="Vy's Page">
+        <area shape="rect" coords="0,130,70,368"  href="./members/22120438/22120436.html" alt="Vu's Page">
+        <area shape="rect" coords="77,145,216,368" href="./members/22120451/22120451.html" alt="Vy's Page">
     </map>
 </body>
 
