--- a/members/22120451/22120451.html
+++ b/members/22120451/22120451.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../default.css">
-    <title>Tuyen's Page</title>
+    <title>Vy's Page</title>
 </head>
 <body background="./images/background.jfif" class="background-image">
     <div class="flex-layout">
         <div class="main">
             <div class="member-card">
                 <div class="member-image">
-                   <img src="./images/avatar.jfif" alt="Tuyen's avatar">
+                   <img src="./images/avatar.jpg" alt="Vy's avatar">
                 </div>
                 <div class="member-info">
-                  <h3>Tuyen</h3>
-                  <p>Musashi</p>
+                  <h3>Vy</h3>
+                  <p>Meowth</p>
                </div>
              </div>
         </div>
         
         <table class="member-table member-table-font">
             <tr>
-                <td class="member-table-header-row" colspan="2"><h1>Huỳnh Thị Kim Tuyền</h1></td>
+                <td class="member-table-header-row" colspan="2"><h1>Vũ Thế Vỹ</h1></td>
             </tr>
             <tr>
                 <th>Student ID</th>
-                <td>22120416</td>
+                <td>22120451</td>
             </tr>
             <tr>
                 <th>Date of birth</th>
-                <td>07/05/2004</td>
+                <td>12/09/2004</td>
             </tr>
             <tr>
                 <th>Email</th>
-                <td>htkt004@gmail.com</td>
+                <td>vuthevy12092004</td>
             </tr>
             <tr>
                 <th>Phone number</th>
