--- a/members/22120436/22120436.html
+++ b/members/22120436/22120436.html
@@ -34,7 +34,7 @@
             </tr>
             <tr>
                 <th>Email</th>
-                <td>vuthevy12092004</td>
+                <td>lctvu@gmail.com</td>
             </tr>
             <tr>
                 <th>Phone number</th>
